@@ -1,6 +1,6 @@
 <!-- Do *not* edit this file; it was automatically generated by ej2html
      Look for a name.ej file with the same name as this filename -->
-<!-- Last updated Wed Aug  5 10:50:16 2020 -->
+<!-- Last updated Sun Aug  9 02:32:19 2020 -->
 
 <HTML><HEAD>
 
@@ -376,6 +376,10 @@ Deadwood can have.  The default value for this is 1024.
 
 <h2>max_tcp_procs</h2>
 This is the number of allowed open TCP connections.  Default value: 8
+
+<h2>min_ttl</h2>
+The minimum amount of time we will keep an entry in the cache, in seconds
+(also called "Minimum TTL").
 
 <h2>num_retries</h2>  
 The number of times we retry to send a query upstream
